--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,9 @@ h6 {
 .active {
   @apply text-accent;
 }
+
+/* swiper pagination style */
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  @apply bg-accent;
+}
